--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
   </head>
   <body>
     <h1>Welcome to a Latin Poems page</h1>
+    <footer>
+      This page was created by
+      <a href="https://github.com/macandelachaves" target="_blank"
+        >Candela Chaves
+      </a>
+      and it's
+      <a
+        href="https://github.com/macandelachaves/Latin-poems-byCan"
+        target="_blank"
+        >an opened sourced</a
+      >. You can also find it on
+      <a
+        href="https://latin-poems-bycan.netlify.app/"
+        target="
+        "
+        >Netlify</a
+      >
+    </footer>
+    <script src="src/index.js"></script>
   </body>
-  <script src="src/index.js"></script>
 </html>
