--- a/index.html
+++ b/index.html
@@ -5,31 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <link rel="stylesheet" href="src/index.css" />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Welcome to a Latin Poems page</h1>
+        <h1>Welcome!</h1>
+        <h2>Generate your poem in spanish 🪄</h2>
       </header>
       <main>
-        <form
-          action="
+        <div class="form-container">
+          <form
+            action="
 "
-          id="poem-form"
-        >
-          <input
-            type="text"
-            placeholder="Enter the topic of the latin poem"
-            autofocus
-            required
-            autocomplete="off"
-            class="poem-request"
-          />
-          <input type="submit" value="SUBMIT" class="poem-request-button" />
-        </form>
-        <div class="main-poem" id="main-poem"></div>
+            id="poem-form"
+          >
+            <input
+              type="text"
+              placeholder="Enter the topic of the latin poem"
+              autofocus
+              required
+              autocomplete="off"
+              class="poem-request"
+              id="poem-request"
+            />
+            <input type="submit" value="SUBMIT" class="poem-request-button" />
+          </form>
+          <div class="hint">i.e : Buenos Aires, Chocolate or Love</div>
+        </div>
+        <div class="main-poem hidden" id="main-poem"></div>
       </main>
       <footer>
         This page was created by
