--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <header>
         <h1>Welcome!</h1>
-        <h2>Generate your poem in spanish 🪄</h2>
+        <h2>Generate your poem in Spanish 🪄</h2>
       </header>
       <main>
         <div class="form-container">
